--- a/source/_posts/19/04/01/190401m013644.md
+++ b/source/_posts/19/04/01/190401m013644.md
@@ -25,6 +25,10 @@ date: 2019-04-01 01:36:44
   <li><strong>2019-04-09:</strong> <a href="#190409m135501">Section</a>.</li>
   <li><strong>2019-04-10:</strong> <a href="#190410m142437">Section</a>.</li>
   <li><strong>2019-04-11:</strong> <a href="#190411m135329">Section</a>.</li>
+  <li><strong>2019-04-12:</strong> <a href="#190412m151033">Section</a>.</li>
+  <li><strong>2019-04-13:</strong> <a href="#190413m023332">Section</a>.</li>
+  <li><strong>2019-04-14:</strong> <a href="#190414m163918">Section</a>.</li>
+  <li><strong>2019-04-15:</strong> <a href="#190415m020723">Section</a>.</li>
 </ol>
 <h2>2019-04<a id="190401m022048"></a></h2>
 <div class="imgBlock">
@@ -284,8 +288,43 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
 <div class="imgBlock">
   <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-11.svg" alt="2019-04-11">
 </div>
+
+<h2>2019-04-12<a id="190412m151033"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-12.svg" alt="2019-04-12">
+</div>
 <ol>
-  <li><strong>:</strong> <a href="">Link</a>.</li>
+  <li><strong>( Video ) 【不止遊戲】遊戲中騎士的板甲真的那麼靈活和堅實嗎？ (Plate armour of knight):</strong> <a href="https://youtu.be/CmSBJywWlqI">Link</a>.</li>
+</ol>
+
+<h2>2019-04-13<a id="190413m023332"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-13.svg" alt="2019-04-13">
+</div>
+<ol>
+  <li><strong>( Vue.js ) { Vuemastery } - style and class binding:</strong> <a href="https://www.vuemastery.com/courses/intro-to-vue-js/class-&-style-binding">Link</a>. So style and class attribute in html element, can not only bind to a value, but also an <strong>object</strong> (or multiple object). Also, you can apply multiple bindings on same style and class attribute, for example give a div element class <u>apple</u> and class <u>bear</u> at the same time.</li>
+  <li><strong>( Vue.js ) { Vuemastery } - Computed Property:</strong> <a href="https://www.vuemastery.com/courses/intro-to-vue-js/computed-properties">Link</a>. Property that you use it as same as other normal property, but it is more efficient, so browser don't have to start over to exectue method everytime something changed. // I think I get what Vue ,, Computed Property, is for, you want to define a property, but the value of that property is not fixed, but based on some calculation or return of some codes.</li>
+  <li><strong>( Vue.js ) { Vuemastery } - { v-model }:</strong> <a href="https://www.vuemastery.com/courses/intro-to-vue-js/forms">Link</a>. Unlike <code>v-bind</code> is one-way data binding (from parent component to child component), <code>v-model</code> is two-way data binding. (Not sure if <code>v-model</code> = <code>v-bind</code> + <code>emit</code>).</li>
+  <li><strong>( Vue.js ) { v-if }, { v-else }, { v-else-if }, nested { v-if }, { v-is }, { v-show }:</strong> <a href="https://flaviocopes.com/vue-dynamically-show-components/">Link1</a>, <a href="https://vuejs.org/v2/guide/conditional.html">Link2</a>.  Those are very important basic functionality.</li>
+  <li><strong>( Vue.js ) Object changed detection caveat:</strong> <a href="https://vuejs.org/v2/guide/list.html#Object-Change-Detection-Caveats">Link</a>. --{ Due to limitations in JavaScript, Vue cannot detect the following changes to an array ... }--, --{ Again due to limitations of modern JavaScript, Vue cannot detect property addition or deletion ... }--.</li>
+</ol>
+<h2>2019-04-14<a id="190414m163918"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-14.svg" alt="2019-04-14">
+</div>
+<ol>
+  <li><strong>( Music ) ( Classical ) { Tiffany Poon } - Bach Partita No.2 in C Minor, BWV 826:</strong> <a href="https://youtu.be/wdN6mLJUTig">Link</a>.</li>
+  <li><strong>( Video ) 【不止遊戲】「不準後退一步！」二戰蘇聯第227號命令真相 (how Soviet Union deal with deserter):</strong> <a href="https://youtu.be/lJ7mwgEX8hU">Link</a>.</li>
+</ol>
+
+<h2>2019-04-15<a id="190415m020723"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-15.svg" alt="2019-04-15">
+</div>
+<ol>
+  <li><strong>( Vue.js ) { Watcher }:</strong> <a href="https://youtu.be/OEitxLemE_g">Link</a>. This is how you monitor the data (any variable), and do something. You monitor the data (any variable) and if they changed, it invoke a function immediately. // Also see { Computed Property }.</li>
+  <li><strong>( Vue.js ) { Created } hook:</strong> See <a href="https://youtu.be/OEitxLemE_g?t=450">this time point</a>. A function will executed when component is rendered?</li>
+  <li><strong>( Javascript ) Does Javascript Passing by value or passing by reference?:</strong> See <a href="https://stackoverflow.com/questions/518000/is-javascript-a-pass-by-reference-or-pass-by-value-language">Link1</a>, <a href="https://medium.com/@naveenkarippai/learning-how-references-work-in-javascript-a066a4e15600">link2</a>, it is a bit complex in background of how it really works, but there is only 3 ruels you need to remember, the primitive types (number, string, etc.) case, object case, redeclare object structure case. Also notice array is object too.</li>
 </ol>
 
 <hr>
