--- a/source/_posts/19/04/01/190401m013644.md
+++ b/source/_posts/19/04/01/190401m013644.md
@@ -29,6 +29,8 @@ date: 2019-04-01 01:36:44
   <li><strong>2019-04-13:</strong> <a href="#190413m023332">Section</a>.</li>
   <li><strong>2019-04-14:</strong> <a href="#190414m163918">Section</a>.</li>
   <li><strong>2019-04-15:</strong> <a href="#190415m020723">Section</a>.</li>
+  <li><strong>2019-04-16:</strong> <a href="#190417m020530">Section</a>.</li>
+  <li><strong>2019-04-17:</strong> <a href="#190417m020539">Section</a>.</li>
 </ol>
 <h2>2019-04<a id="190401m022048"></a></h2>
 <div class="imgBlock">
@@ -325,13 +327,41 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
   <li><strong>( Vue.js ) { Watcher }:</strong> <a href="https://youtu.be/OEitxLemE_g">Link</a>. This is how you monitor the data (any variable), and do something. You monitor the data (any variable) and if they changed, it invoke a function immediately. // Also see { Computed Property }.</li>
   <li><strong>( Vue.js ) { Created } hook:</strong> See <a href="https://youtu.be/OEitxLemE_g?t=450">this time point</a>. A function will executed when component is rendered?</li>
   <li><strong>( Javascript ) Does Javascript Passing by value or passing by reference?:</strong> See <a href="https://stackoverflow.com/questions/518000/is-javascript-a-pass-by-reference-or-pass-by-value-language">Link1</a>, <a href="https://medium.com/@naveenkarippai/learning-how-references-work-in-javascript-a066a4e15600">link2</a>, it is a bit complex in background of how it really works, but there is only 3 ruels you need to remember, the primitive types (number, string, etc.) case, object case, redeclare object structure case. Also notice array is object too.</li>
+  <li><strong>( Javascript ) ( Fetch API) ( http ) { Cross Origin Resource Sharing (CORS) } problem:</strong>
+    <ol>
+      <li><strong>Cross Origin Resource Sharing (CORS) - { MDN }:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS">Link</a>. <code>Same Origin Policy</code>. This is why you see error message <code>Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at https://images.dog.ceo/breeds/hound-basset/n02088238_1731.jpg. (Reason: CORS header ‘Access-Control-Allow-Origin’ missing).</code> in <code>web console</code> when you access blob data from different Origin in front-end. // So the source problem is <code>Same Origin Policy</code>, if the server didn't have set up <code>CORS</code> response header, then your client side can't request this kind of <code>Origin</code> with <code>fetch(myUrl, {mode: "cors"})</code>.</li>
+      <li><strong>{ Access-Control-Request-Headers } and { Preflight request }:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Request-Headers">Link1</a>, <a href="https://developer.mozilla.org/en-US/docs/Glossary/preflight_request">lin2</a>.</li>
+      <li><strong>{ Access-Control-Allow-Origin } header and { JSON padding (JSONP) } :</strong> <a href="https://medium.freecodecamp.org/use-jsonp-and-other-alternatives-to-bypass-the-same-origin-policy-17114a5f2016">Link</a>. Bypass the <code>Same Origin Policy</code>.</li>
+      <li><strong>Add Content-Type in header will cause a OPTION request:</strong> <a href="https://github.com/github/fetch/issues/143">Link</a>. So the source problem is still <code>Same Origin Policy</code>, if the server didn't have set up <code>CORS</code> response header, then your client side can't request this kind of <code>Origin</code> with <code>fetch(myUrl, {mode: "cors"})</code>..</li>
+      <li><strong>( Javascript ) { imageObject.onload = callbackFunc } and { imageDomElement.onload = callbackFunc }:</strong> <a href="https://stackoverflow.com/questions/12354865/image-onload-event-and-browser-cache#12355031">Link</a>. Do something after make sure an image is fully loaded.</li>
+      <li><strong>( Javascript ) Stop using { console.log() } for debugging, it's broken:</strong> <a href="https://hackernoon.com/please-stop-using-console-log-its-broken-b5d7d396cf15">Link</a>. Oh, so this is the first time I know there is extrak debugger, are they special software need to installed seperately? Still have no clue about it yet.</li>
+      <li><strong>( Javascript ) How to clear all { console.log() } with just few lines of code:</strong> <a href="https://www.codementor.io/brijmcq/angular-clear-all-of-your-console-logs-in-production-build-with-just-a-few-lines-of-code-cxcw30yqs">Link1</a>, <a href="https://stackoverflow.com/questions/8002116/should-i-be-removing-console-log-from-production-code/8002527#8002527">link2</a>.</li>
+    </ol>
+  </li>
+</ol>
+
+<h2>2019-04-16<a id="190417m020530"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-16.svg" alt="2019-04-16">
+</div>
+<ol>
+  <li><strong>( Video ) Hospice - { 最後這條路｜留住每一個當下的美好｜三之三 } - { TheNewsLens }:</strong>  Keep watching the remaining part.</li>
+  <li><strong>( Video ) { She's Danni } - Weekly Vlog 37 - 去华大看樱花🌸只有女生可以参加的会议 - DIY青团:</strong> <a href="https://youtu.be/XLnKK3iNL4k"></a></li>
+</ol>
+
+<h2>2019-04-17<a id="190417m020539"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-17.svg" alt="2019-04-17">
+</div>
+<ol>
+  <li><strong>:</strong> <a href=""></a></li>
 </ol>
 
 <hr>
 
 <div class="facetList">
 Cmm: u190401m013644 x88lost x88fs c88log log88table c88current
-Current: ti88crr88y19 ti88crr88y19dw4 ti88crr88y19m04 ti88crr88y19m04d11 ti88crr88y19m04dw4 ti88crr88y19q2 ti88crr88y19q2dw4 ti88crr88y19w15 ti88crr88y19w15dw4
+Current: ti88crr88y19 ti88crr88y19dw3 ti88crr88y19m04 ti88crr88y19m04d17 ti88crr88y19m04dw3 ti88crr88y19q2 ti88crr88y19q2dw3 ti88crr88y19w16 ti88crr88y19w16dw3
 Time (d): ti88y19 ti88y19dw1 ti88y19m04 ti88y19m04d01 ti88y19m04dw1 ti88y19q2 ti88y19q2dw1 ti88y19w14 ti88y19w14dw1
 </div>
 {% endraw %}
