--- a/source/_posts/19/04/01/190401m013644.md
+++ b/source/_posts/19/04/01/190401m013644.md
@@ -31,6 +31,12 @@ date: 2019-04-01 01:36:44
   <li><strong>2019-04-15:</strong> <a href="#190415m020723">Section</a>.</li>
   <li><strong>2019-04-16:</strong> <a href="#190417m020530">Section</a>.</li>
   <li><strong>2019-04-17:</strong> <a href="#190417m020539">Section</a>.</li>
+  <li><strong>2019-04-18:</strong> <a href="#190418m005247">Section</a>.</li>
+  <li><strong>2019-04-19:</strong> <a href="#190419m202121">Section</a>.</li>
+  <li><strong>2019-04-20:</strong> <a href="#190420m081032">Section</a>.</li>
+  <li><strong>2019-04-21:</strong> <a href="#190420m230822">Section</a>.</li>
+  <li><strong>2019-04-22:</strong> <a href="#190421m232756">Section</a>.</li>
+  <li><strong>{ Pollash }:</strong> <a href="#190419m212225">Section</a>.</li>
 </ol>
 <h2>2019-04<a id="190401m022048"></a></h2>
 <div class="imgBlock">
@@ -218,7 +224,7 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
       <li><strong>{ URL.createObjectURL() } - 不用後端，前端便能產生獲取指定物件的網址:</strong> <a href="https://medium.com/@kf99916/html5-%E7%A5%9E%E5%A5%87%E7%9A%84-object-url-%E4%B8%8D%E7%94%A8%E5%BE%8C%E7%AB%AF-%E5%89%8D%E7%AB%AF%E4%BE%BF%E8%83%BD%E7%94%A2%E7%94%9F%E7%8D%B2%E5%8F%96%E6%8C%87%E5%AE%9A%E7%89%A9%E4%BB%B6%E7%9A%84%E7%B6%B2%E5%9D%80-6df283d58505">Link</a>.</li>
     </ol>
   </li>
-  <li><strong>( Javascript ) Check if an element is present in an array:</strong> <a href="https://stackoverflow.com/questions/7378228/check-if-an-element-is-present-in-an-array">Link</a>. Use <code>includes()</code>, or <code>indexOf()</code>.</li>
+  <li><strong>( Javascript ) Check if an element is present in an array:</strong> <a href="https://stackoverflow.com/questions/7378228/check-if-an-element-is-present-in-an-array">Link</a>. Use <code>indexOf()</code>, or <code>includes()</code>. If your array have object elements (instead of string elements), and you want to further find inside that object (see <a href="https://stackoverflow.com/questions/39206522/find-if-an-element-exists-in-javascript-array">this data structure example</a>), you can use <code>myArray.find((o) => o.hasOwnProperty("targetFindingProperty"))</code>.</li>
   <li><strong>( Video ) { She's Danni } - Weekly Vlog 36 一个艰难的决定:</strong> <a href="https://youtu.be/OccI8CK4G7I">Link</a>. I'm a bit like this kind of personality, the rationality and principle side.</li>
   <li><strong>( Video ) { The Academy Irish Dance Company } - Dublin Irish Festival 2016:</strong> <a href="https://youtu.be/tEJeaC5x76I">Link</a>.</li>
 </ol>
@@ -354,8 +360,93 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
   <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-17.svg" alt="2019-04-17">
 </div>
 <ol>
-  <li><strong>:</strong> <a href=""></a></li>
+  <li><strong>( Music ) ( Classical ) Beethoven - Concerto pour piano n°3 - Alice Sara Ott / Orchestre philharmonique de Radio France:</strong> <a href="https://youtu.be/PM0HqmptYlY">Link</a>. That pianist is highly focused (and hihgly diffuse at the same time). // Disease - In February 2019, <code>Alice Sara Ott</code> announced on Instagram that she had been diagnosed with <a href="https://en.wikipedia.org/wiki/Multiple_sclerosis">{ multiple sclerosis }</a>.</li>
+  <li><strong>( Music ) ( Classical ) Tiffany Poon cover - Bach - Partita No.2 in C Minor, BWV 826:</strong> <a href="https://youtu.be/wdN6mLJUTig">Link</a>. This girl is highly focused too.</li>
 </ol>
+
+<h2>2019-04-18<a id="190418m005247"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-18.svg" alt="2019-04-18">
+</div>
+
+<h2>2019-04-19<a id="190419m202121"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-19.svg" alt="2019-04-19">
+</div>
+<ol>
+  <li><strong>What is the most lightweight browser?:</strong> <a href="https://www.quora.com/What-is-the-most-lightweight-browser?share=1">Link</a>.</li>
+  <li><strong>{ Midori } browser:</strong> <a href="https://www.midori-browser.org/">Link</a>. Yeah, very light weight, not using noticeable memory at all.</li>
+  <li><strong>Installing { snap } (snapd) and using { snap }:</strong> <a href="https://docs.snapcraft.io/getting-started/3876">Link</a>.</li>
+  <li><strong>Julian Assange been arrested in United Kingdom:</strong> <a href="https://en.wikipedia.org/wiki/Julian_Assange">Julian Assange</a>.</li>
+  <li><strong>( Programming ) ( Javascript ) Data Structure and Algorithms in Javascript:</strong> <a href="https://github.com/amejiarosario/dsa.js">Link</a>. Suggested by <code>Jahirul Islam</code>, not research on it yet.</li>
+  <li><strong>( Music ) ( Game ) { Hearts of Iron 2 }:</strong>
+    <ol>
+      <li><strong>{ Andreas Waldetoft } - { Overture }:</strong> <a href="https://youtu.be/sHsOasp0LAo?list=RDFpPGsCfJFWQ">Link</a>.</li>
+      <li><strong>{ Andreas Waldetoft } - { The Front }:</strong> <a href="https://youtu.be/FpPGsCfJFWQ">Link</a>.</li>
+      <li><strong>{ Andreas Waldetoft } - { Kriegsgewitter }:</strong> <a href="https://youtu.be/dkq1G4LhIbo">Link</a>.</li>
+      <li><strong>{ Andreas Waldetoft } - { The R.A.F. }:</strong> <a href="https://youtu.be/epxc9qtRQJM">Link</a>.</li>
+      <li><strong>{ Andreas Waldetoft } - { Airborne }:</strong> <a href="https://youtu.be/CEvZdxqmdDM">Link</a>.</li>
+      <li><strong>{ Andreas Waldetoft } - { Leaving Shore }:</strong> <a href="https://youtu.be/OLTAFOpZm7k">Link</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Game ) { Stardew Valley } :</strong> <a href="https://en.wikipedia.org/wiki/Stardew_Valley">Link</a>. I'm just curious about what different type of game look like.</li>
+</ol>
+
+<h2>2019-04-20<a id="190420m081032"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-20.svg" alt="2019-04-20">
+</div>
+<ol>
+  <li><strong>( Javascript ) Check if an element is present in an array:</strong> <a href="https://stackoverflow.com/questions/7378228/check-if-an-element-is-present-in-an-array">Link</a>. Use <code>includes()</code> (<a href="https://stackoverflow.com/a/38073833/10607630">link</a>) ([ ECMAScript 2016 ]-[ ES7 ]), or <code>indexOf()</code>, or . If your array have object elements (instead of string elements), and you want to further find inside that object (see <a href="https://stackoverflow.com/questions/39206522/find-if-an-element-exists-in-javascript-array">this data structure example</a>), you can use <code>myArray.find((o) => o.hasOwnProperty("targetFindingProperty"))</code>.</li>
+  <li><strong>Cleaning my keyboard:</strong>
+    <ol>
+      <li><strong>Before:</strong>
+        <div class="imgBlock">
+          <img src="/treegbBlog/fs/m/19/04/20/190420m163522/190420m163430.jpg" alt="">
+        </div>
+      </li>
+      <li><strong>After:</strong>
+        <div class="imgBlock">
+          <img src="/treegbBlog/fs/m/19/04/20/190420m163522/190420m163431.jpg" alt="">
+        </div>
+      </li>
+      <li><strong>What I learned:</strong> Porblem solving experience, and how to trouble shooting by logic and resoning. I tried to put back all the keyboard buttons without reference the photo I took before I took them off, the keyboard buttons are in fact a bit different (height, with or without scissor foot ...), by [ guessing ]-[ making asumption ], resoning, narrow down the possibility, I can gradually put all 100 keyboard buttons back, even I'm not familiar with them very well.</li>
+    <ol>
+  </li>
+  <li><strong>( Video ) { TedTalks } - { 曾博恩 } - 興趣沒有目的地 :</strong> <a href="https://youtu.be/CJd1Qiz8QDQ">Link</a>.</li>
+  <li><strong>( Music ) { 周杰倫 } - { 七里香 }:</strong> <a href="https://youtu.be/Bbp9ZaJD_eA">Link</a>.</li>
+  <li><strong>( Video ) { She's Danni } - Weekly Vlog 38:</strong> <a href="https://youtu.be/Zgsdm6RVasw">Link</a>.</li>
+  <li><strong>( Video ) { She's Danni } - 一波三折的拉斯维加斯两天三夜 - 周杰伦演唱会:</strong> <a href="https://youtu.be/tbBs6uId3qc">Link</a>.</li>
+  <li><strong>( Diagram ) Causal Loop Diagrams:</strong> <a href="https://youtu.be/L1bJnyjK-UU">Link</a>. A bit similar to cocept map. The basic elements are the same.</li>
+</ol>
+
+<h2>2019-04-21<a id="190420m230822"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-21.svg" alt="2019-04-21">
+</div>
+<ol>
+  <li><strong>{ The News Lens } - 巴黎聖母院大火與大整修計畫 - (Notre-Dame de Paris on fire):</strong> <a href="https://youtu.be/4X6UCFcvwXY">Link</a>.</li>
+  <li><strong>( Media ) { 新唐人亞太電視 }:</strong> <a href="https://youtu.be/Dq5RlAUUBcs?t=435">Link</a>. I keep this because they mentioned about democracy, media unfreedom of China , 1989 Tiananmen Square protests (64 天安門事件) and "president" (of Taiwan), it imply this media is somehow worthy to trust, though I still not doing further research about this media. // They offer more world overview, not focused on local news.</li>
+  <li><strong>( Video ) Miles Guo and Steve Bannon, a dialogue on Terry Gou’s presidential bid - (2019年4月20日班农先生与文贵谈郭台铭选台湾总统):</strong> <a href="https://youtu.be/Uh8Ourx9kRw">Link</a>. Miles Guo successfully predicted Terry Gou’s (郭台民) (Foxconn founder and CEO) will candidate the 2020 Taiwan’s presidential election. // <a href="https://youtu.be/Uh8Ourx9kRw?t=934">15:34</a>, what is the clue Miles Guo based on at that time, to predict this possibility?</li>
+  <li><strong>( Video ) Corgi (dog) races in Canterbury Park in 2016:</strong> <a href="https://youtu.be/tPuKyeVsfZY">Link</a>.</li>
+  <li><strong>( Game ) 踩地雷 - (Minesweeper):</strong> <a href="https://youtu.be/ZOoXpoHpFHo">Link</a>. I'm not interesting the game itself, I'm just thinking other things like, in every field, people could dive as deep as possible. And there is always some people that is highly focus on thsoe field, they never give up. And such "simple" looking game like <code>Tetris</code> and <code>Minesweepercan</code> could be very hard to [ design ]-[ programming ], I might had just heavily underestimate the logic and complexity it tooks for these "stupid simple" game, before I have some degree of self awareness of how stupid I'm was, about the real coding and complexity behind.</li>
+  <li><strong>( Javascript ) Several standard way to deep clone an object:</strong> <a href="http://larry850806.github.io/2016/09/20/shallow-vs-deep-copy/">Link</a>. So ES6 ,, <code>Object.assign()</code> is useless for me since it only do "shallow clone". And using <code>JSON.stringify()</code> then <code>JSON.parse()</code>, "hack", has intrinsic drawback that don't support some javascript object. So I think I will do this stuff with <code>jquery</code> library ,, <code>$.extend()</code>, or <code>lodash</code> library.</li>
+  <li><strong>( Vue.js ) How to use JQuery (or other library) inside Vue:</strong> <a href="https://medium.com/code4mk-org/how-to-use-jquery-inside-vue-add-other-js-library-inside-vue-9eea8fbd0416">Link</a>.</li>
+  <li><strong>( Video ) { 館長 } - 中壢館，工程中:</strong> <a href="https://youtu.be/aHmM6Q9VnnI">Link</a>. 只有一個字，大。</li>
+</ol>
+
+<h2>2019-04-22<a id="190421m232756"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-22.svg" alt="2019-04-22">
+</div>
+<ol>
+  <li><strong>:</strong> <a href="">Link</a>.</li>
+</ol>
+
+<h2>{ Pollash }<a id="190419m212225"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/pollash.svg" alt="Pollash">
+</div>
 
 <hr>
 
